# WeTools

./: .gitignore  CMakeLists.txt  README.md
app/desktop/: QWindowBase.cpp  QWindowBase.h  commonhelper.h  main.cpp  qt_businesscard.cpp  qt_businesscard.h  qt_common.h  qt_content.cpp  qt_content.h  qt_desktop.cpp  qt_desktop.h  qt_drawer.cpp  qt_drawer.h  qt_movewidget.cpp  qt_movewidget.h  qt_sidebar.cpp  qt_sidebar.h  qt_titlebar.cpp  qt_titlebar.h  qt_tools.cpp  qt_tools.h  ui_desktop.h
app/material/: main.qrc  main.rcc
cmake/: CMakeLists.txt  appbuild.cmake  prebuild.cmake
utils/: singleton.h
